Add input with full rgb code and some css style

--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
           <input type="range" id="bValueRange" value="0" min="0" max="255" />
           <input type="text" id="bValueInput" value="0" disabled readonly />
         </div>
+        <div class="divRgb">
+          <input
+            type="text"
+            id="rgbInput"
+            value="rgb(0, 0, 0)"
+            disabled
+            readonly
+          />
+        </div>
         <!-- Final Color - Creeper Bg -->
         <script defer src="./js/creeper_canvas.js"></script>
         <canvas
